--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+   --main-color: rgb(148, 57, 16);
+}
+img{
+  object-fit: cover;
+}
